# text.ur

./: .env.template  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pnpm-lock.yaml
backend/: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-entrypoint.sh  docker-userlist.txt.template  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/core/: app_exception.py  auth.py  config.py  logger.py  rate_limit.py
backend/app/models/: __init__.py  app_error.py  auth.py  base.py  comment.py  document.py  enums.py  event.py  filter.py  group.py  pagination.py  reaction.py  score.py  sharelink.py  sort.py  tables.py  tag.py  task.py  user.py
backend/app/static/: openapi.css
backend/app/util/: advisory_lock.py  api_router.py  cache.py  cleanup.py  file_validation.py  group_cleanup.py  ip.py  migrate_storage.py  openapi.py  queries.py  response.py
backend/database/: README.md  alembic.ini  env.py  init.py
backend/database/dumps/: dump.sql
backend/database/versions/: 02225ce72602_add_tag_and_commenttag_tables.py  0c5025fb1337_consolidated.py  174194a9a028_add_sharelink_ref_to_membership.py  2023353843ad_rename_s3_key_to_storage_key.py  209faa01502d_add_document_description.py  2362645d4fc2_make_user_id_required_for_comments_and_.py  2903a6e3b722_add_indexes_and_comment_user_cascade.py  (+23 more)
backend/scripts/: generate_exclusion_maps.py  s3_download.py  s3_upload.py
backend/templates/: base.jinja  register.jinja
backend/tests/: conftest.py
docs/: ci.md  (+5 more)
(+261 files in other folders)
